Separated all components to avoid clutter, added few animations to navbar name input and added mute and video off screens

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@
 
 html{
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
